// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders correctly 1`] = `
<ProviderPagination
  itemsCountPerPage={25}
  onChange={[Function]}
  page={1}
  totalItemsCount={100}
>
  <div
    className="module"
  >
    <a
      activePage={1}
      firstPageText="«"
      innerClass="pagination"
      itemsCountPerPage={25}
      lastPageText="»"
      nextPageText="⟩"
      onChange={[Function]}
      pageRangeDisplayed={3}
      prevPageText="⟨"
      totalItemsCount={100}
    >
      <ul
        className="pagination"
      >
        <t
          activeClass="active"
          disabledClass="disabled"
          isActive={false}
          isDisabled={true}
          key="first"
          linkClass=""
          onClick={[Function]}
          pageNumber={1}
          pageText="«"
        >
          <li
            className="disabled"
            onClick={[Function]}
          >
            <a
              className=""
              href="#"
            >
              «
            </a>
          </li>
        </t>
        <t
          activeClass="active"
          disabledClass="disabled"
          isActive={false}
          isDisabled={true}
          key="prev0"
          linkClass=""
          onClick={[Function]}
          pageNumber={0}
          pageText="⟨"
        >
          <li
            className="disabled"
            onClick={[Function]}
          >
            <a
              className=""
              href="#"
            >
              ⟨
            </a>
          </li>
        </t>
        <t
          activeClass="active"
          disabledClass="disabled"
          isActive={true}
          isDisabled={false}
          key="1"
          onClick={[Function]}
          pageNumber={1}
          pageText="1"
        >
          <li
            className="active"
            onClick={[Function]}
          >
            <a
              className="undefined"
              href="#"
            >
              1
            </a>
          </li>
        </t>
        <t
          activeClass="active"
          disabledClass="disabled"
          isActive={false}
          isDisabled={false}
          key="2"
          onClick={[Function]}
          pageNumber={2}
          pageText="2"
        >
          <li
            className=""
            onClick={[Function]}
          >
            <a
              className=""
              href="#"
            >
              2
            </a>
          </li>
        </t>
        <t
          activeClass="active"
          disabledClass="disabled"
          isActive={false}
          isDisabled={false}
          key="3"
          onClick={[Function]}
          pageNumber={3}
          pageText="3"
        >
          <li
            className=""
            onClick={[Function]}
          >
            <a
              className=""
              href="#"
            >
              3
            </a>
          </li>
        </t>
        <t
          activeClass="active"
          disabledClass="disabled"
          isActive={false}
          isDisabled={false}
          key="next2"
          linkClass=""
          onClick={[Function]}
          pageNumber={2}
          pageText="⟩"
        >
          <li
            className=""
            onClick={[Function]}
          >
            <a
              className=""
              href="#"
            >
              ⟩
            </a>
          </li>
        </t>
        <t
          activeClass="active"
          disabledClass="disabled"
          isActive={false}
          isDisabled={false}
          key="last"
          linkClass=""
          onClick={[Function]}
          pageNumber={4}
          pageText="»"
        >
          <li
            className=""
            onClick={[Function]}
          >
            <a
              className=""
              href="#"
            >
              »
            </a>
          </li>
        </t>
      </ul>
    </a>
  </div>
</ProviderPagination>
`;

exports[`Pagination renders correctly 2`] = `
<ProviderPagination
  itemsCountPerPage={25}
  onChange={[Function]}
  page={2}
  totalItemsCount={100}
>
  <div
    className="module"
  >
    <a
      activePage={2}
      firstPageText="«"
      innerClass="pagination"
      itemsCountPerPage={25}
      lastPageText="»"
      nextPageText="⟩"
      onChange={[Function]}
      pageRangeDisplayed={3}
      prevPageText="⟨"
      totalItemsCount={100}
    >
      <ul
        className="pagination"
      >
        <t
          activeClass="active"
          disabledClass="disabled"
          isActive={false}
          isDisabled={false}
          key="first"
          linkClass=""
          onClick={[Function]}
          pageNumber={1}
          pageText="«"
        >
          <li
            className=""
            onClick={[Function]}
          >
            <a
              className=""
              href="#"
            >
              «
            </a>
          </li>
        </t>
        <t
          activeClass="active"
          disabledClass="disabled"
          isActive={false}
          isDisabled={false}
          key="prev1"
          linkClass=""
          onClick={[Function]}
          pageNumber={1}
          pageText="⟨"
        >
          <li
            className=""
            onClick={[Function]}
          >
            <a
              className=""
              href="#"
            >
              ⟨
            </a>
          </li>
        </t>
        <t
          activeClass="active"
          disabledClass="disabled"
          isActive={false}
          isDisabled={false}
          key="1"
          onClick={[Function]}
          pageNumber={1}
          pageText="1"
        >
          <li
            className=""
            onClick={[Function]}
          >
            <a
              className=""
              href="#"
            >
              1
            </a>
          </li>
        </t>
        <t
          activeClass="active"
          disabledClass="disabled"
          isActive={true}
          isDisabled={false}
          key="2"
          onClick={[Function]}
          pageNumber={2}
          pageText="2"
        >
          <li
            className="active"
            onClick={[Function]}
          >
            <a
              className="undefined"
              href="#"
            >
              2
            </a>
          </li>
        </t>
        <t
          activeClass="active"
          disabledClass="disabled"
          isActive={false}
          isDisabled={false}
          key="3"
          onClick={[Function]}
          pageNumber={3}
          pageText="3"
        >
          <li
            className=""
            onClick={[Function]}
          >
            <a
              className=""
              href="#"
            >
              3
            </a>
          </li>
        </t>
        <t
          activeClass="active"
          disabledClass="disabled"
          isActive={false}
          isDisabled={false}
          key="next3"
          linkClass=""
          onClick={[Function]}
          pageNumber={3}
          pageText="⟩"
        >
          <li
            className=""
            onClick={[Function]}
          >
            <a
              className=""
              href="#"
            >
              ⟩
            </a>
          </li>
        </t>
        <t
          activeClass="active"
          disabledClass="disabled"
          isActive={false}
          isDisabled={false}
          key="last"
          linkClass=""
          onClick={[Function]}
          pageNumber={4}
          pageText="»"
        >
          <li
            className=""
            onClick={[Function]}
          >
            <a
              className=""
              href="#"
            >
              »
            </a>
          </li>
        </t>
      </ul>
    </a>
  </div>
</ProviderPagination>
`;

exports[`Pagination renders correctly 3`] = `
<ProviderPagination
  itemsCountPerPage={25}
  onChange={[Function]}
  page={1}
  totalItemsCount={0}
/>
`;
